changed email field

--- a/views/layouts/login_signup.handlebars
+++ b/views/layouts/login_signup.handlebars
@@ -59,7 +59,7 @@
                 </td>
                 <td>
                     <label for = "email" >Email:</label>
-                    <input type="text" name="email"  id = "email" required> <br>
+                    <input type="email" name="email"  id = "email" required> <br>
                 </td>
                 <td>{{signup_error}}</td>
                 </tr>
