finished uploading a post

--- a/views/layouts/post_review.handlebars
+++ b/views/layouts/post_review.handlebars
@@ -4,7 +4,7 @@
             <input type="text" id="bid" name="bid"><br>
         </label>
         <label for="image"> Image:
-            <input type="file" name="image">    
+            <input type="file" accept="images/*" name="image">    
         </label>
         <label for="rating"> Rating:
             <input type="number" name="rating">
