added reference to home page

--- a/views/layouts/post_review.handlebars
+++ b/views/layouts/post_review.handlebars
@@ -1,4 +1,5 @@
 <main>
+    <a href = "/home" > Home </a>
     <form class="form" enctype="multipart/form-data" action="/post_status" method="POST">
         <label for="name" > Beverage Name:
             <input type="text" id="bid" name="bid"><br>
