--- a/views/layouts/post_review.handlebars
+++ b/views/layouts/post_review.handlebars
@@ -8,7 +8,7 @@
             <input type="file" accept="images/*" name="image">    
         </label>
         <label for="rating"> Rating:
-            <input type="number" name="rating">
+            <input type="number" min="0" max="5" name="rating">
         </label>
         <label for="content"> Content:
             <input type="text" name="content"> 
