--- a/views/layouts/post_status.handlebars
+++ b/views/layouts/post_status.handlebars
@@ -3,6 +3,7 @@
     <p>Error: Beverage Not Found</p>
     {{else}}
     <a href = "/post_review" > Make Another Review</a>
+    <h2> Success </h2>
     <h3> {{author}} </h3>
     <h4> {{beverage}}  </h4>
     <img src="/public/images/{{path}}" alt="Beverage Photo"/> 
