--- a/views/layouts/post_review.handlebars
+++ b/views/layouts/post_review.handlebars
@@ -2,16 +2,16 @@
     <a href = "/home" > Home </a>
     <form class="form" enctype="multipart/form-data" action="/post_status" method="POST">
         <label for="name" > Beverage Name:
-            <input type="text" id="bid" name="bid"><br>
+            <input type="text" id="bid" name="bid" required><br>
         </label>
         <label for="image"> Image:
-            <input type="file" accept="images/*" name="image">    
+            <input type="file" accept="images/*" name="image" required>    
         </label>
         <label for="rating"> Rating:
-            <input type="number" min="0" max="5" name="rating">
+            <input type="number" min="0" max="5" name="rating" required>
         </label>
         <label for="content"> Content:
-            <input type="text" name="content"> 
+            <input type="text" name="content" required> 
         </label>
         <button class="button" type="submit"> Submit </button>
     </form>
