modified handlebars for posts

--- a/views/layouts/post_review.handlebars
+++ b/views/layouts/post_review.handlebars
@@ -1,6 +1,9 @@
 <main>
     <a href = "/home" > Home </a>
     <form class="form" enctype="multipart/form-data" action="/post_status" method="POST">
+        <label for="title" > Title:
+            <input type="text" id="title" name="title" required><br>
+        </label>
         <label for="name" > Beverage Name:
             <input type="text" id="bid" name="bid" required><br>
         </label>
