--- a/views/layouts/post_status.handlebars
+++ b/views/layouts/post_status.handlebars
@@ -4,8 +4,9 @@
     {{else}}
     <a href = "/post_review" > Make Another Review</a>
     <h2> Success </h2>
-    <h3> {{author}} </h3>
-    <h4> {{beverage}}  </h4>
+    <h3> Title: {{title}} </h2>
+    <h3> Author: {{author}} </h3>
+    <h4> Beverage: {{beverage}}  </h4>
     <img src="/public/images/{{path}}" alt="Beverage Photo"/> 
     <p> {{content}} </p>
     {{/if}}
