--- a/views/layouts/beverage.handlebars
+++ b/views/layouts/beverage.handlebars
@@ -7,12 +7,12 @@
     
     <div>
         <ol>
-            {{#if !Posts.length}}
-                <p>This beverage has no posts.</p>
-            {{else}}
+            {{#if Posts}}
                 {{#each Posts}}
                     <li>{{Posts.author}}: <a href="posts/{{Posts.id}}">{{Posts.title}}</a> </li>
-                {{/each}}
+                {{/each}}   
+            {{else}}
+                <p>This beverage has no posts.</p>
             {{/if}}
         </ol>
     </div>
