--- a/views/layouts/post_page.handlebars
+++ b/views/layouts/post_page.handlebars
@@ -13,7 +13,7 @@
     <p> {{post.content}} </p>
     
     <div class="formArea">
-        <form method="POST">
+        <form>
             <label for="content"></label>
             <input type="text" name="content" id="content">
             <input type="button" onclick="addComment()" value="Submit comment!">
