--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,5 +1,5 @@
 body {
-	background: #ffffcc;
+	background: #fff7d8;
 }
 main {
 	background: grey;
@@ -51,3 +51,22 @@ label {
 	display: inline-block;
 }
 
+.title {
+	border-bottom: 5px solid black;
+	margin-bottom: 20px;
+}
+
+.title span{
+	color: black;
+	font-family: "Times New Roman", Times, serif;
+	font-size: 40px;
+	border: 5px solid blue;
+	padding: 5px;
+	border-radius: 25px;
+
+}
+
+.search ul{
+	background:#707070;
+
+}
