--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,11 @@
 	    <title>{{title}}</title>
 	</head>
 	<body>
+		<nav>
+			<a href = "/login_signup">{{LOGIN_LINK}}</a>
+ 			<a href = "/logout">{{LOGOUT_LINK}}</a>
+ 		    <p>{{USERNAME}}</p>
+		</nav>
 		<h1>{{title}}</h1> 
 		{{{body}}}
 	</body>
