jquery/ajax for comments

--- a/views/layouts/post_page.handlebars
+++ b/views/layouts/post_page.handlebars
@@ -13,10 +13,10 @@
     <p> {{post.content}} </p>
     
     <div class="formArea">
-        <form>
+        <form id="comment_form">
             <label for="content"></label>
             <input type="text" name="content" id="content">
-            <input type="button" onclick="addComment()" value="Submit comment!">
+            <input type="submit" value="Submit comment!">
         </form>
     </div>
 
