--- a/views/layouts/post_page.handlebars
+++ b/views/layouts/post_page.handlebars
@@ -29,6 +29,7 @@
                         CONTENT: {{this.content}} <br>
                     </div>
                 </li>
+            {{/each}}
         </ul>
     </div>
 </main>
