its called _id guys

--- a/views/layouts/search.handlebars
+++ b/views/layouts/search.handlebars
@@ -19,7 +19,7 @@
 <ul>
 	{{#each drinks}}
 	<li>
-	<a href="/beverage/{{this.id}}">{{this.name}}</a></br>
+	<a href="/beverage/{{this._id}}">{{this.name}}</a></br>
 	
 	</li>
 	{{/each}}
