--- a/views/layouts/post_page.handlebars
+++ b/views/layouts/post_page.handlebars
@@ -2,14 +2,16 @@
     <a href = "/home" > Home </a>
     <a href = "/beverage/{{beverageRoute}}" > Beverages </a>
     {{#if button}}
+        <input type="hidden" id="beverage" name="beverage" value="{{beverageRoute}}" />
+        <input type="hidden" id="post" name="post" value="{{post._id}}" />
         <form action="/post/delete" method="POST"> 
              <button type="submit">Submit</button>
         </form>
     {{/if}} 
     <h3> Title: {{post.title}} </h2>
     <h3> Author: {{post.author}} </h3>
-    <h4> Beverage: {{post.beverage}}  </h4>
-    <img src="/public/images/{{post.path}}" alt="Beverage Photo"/> 
+    <h4> Beverage: {{post.beverage_id}}  </h4>
+    <img src="/public/images/{{post.photo_path}}" alt="Beverage Photo"/> 
     <p> {{post.content}} </p>
     
     <div class="formArea">
