fixed post handlebars

--- a/views/layouts/post_page.handlebars
+++ b/views/layouts/post_page.handlebars
@@ -9,7 +9,7 @@
         </form>
     {{/if}} 
     <h3> Title: {{post.title}} </h2>
-    <h3> Author: {{post.author}} </h3>
+    <h3> Author: {{post.author_id}} </h3>
     <h4> Beverage: {{post.beverage_id}}  </h4>
     <img src="/public/images/{{post.photo_path}}" alt="Beverage Photo"/> 
     <p> {{post.content}} </p>
