--- a/views/layouts/login_signup.handlebars
+++ b/views/layouts/login_signup.handlebars
@@ -8,7 +8,7 @@
     <title>Login</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<link rel="stylesheet" href="/public/css/site.css">
    
 </head>
 
