--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,13 +6,14 @@
 	    <link rel="stylesheet" href="/public/css/site.css">
 	</head>
 	<body>
-		<nav>
+		<nav class="loginOrLogout">
 			<a href = "/login_signup">{{LOGIN_LINK}}</a>
  			<a href = "/logout">{{LOGOUT_LINK}}</a>
  		    <p>{{USERNAME}}</p>
 		</nav>
-		<h1>{{title}}</h1> 
-		{{{body}}}
+		<h1>{{title}}</h1>
+		<br> 
+		<div>{{{body}}}</div>
 	</body>
 </html>
 
