--- a/views/layouts/post_page.handlebars
+++ b/views/layouts/post_page.handlebars
@@ -17,8 +17,9 @@
     <div class="formArea">
         <form id="comment_form">
             <label for="content"></label>
-            <input type="text" name="content" id="content">
-            <input type="submit" value="Submit comment!">
+            <input type="text" name="content" id="content"/>
+            <input type= "hidden" id = "post_id" name = 'post_id' value = "{{post._id}}"/>
+            <input type="submit" value="Submit comment!"/>
         </form>
     </div>
 
