--- a/views/layouts/post_page.handlebars
+++ b/views/layouts/post_page.handlebars
@@ -35,4 +35,6 @@
             {{/each}}
         </ul>
     </div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+	<script src="../../public/js/comment.js"></script>
 </main>
