--- a/views/layouts/post_page.handlebars
+++ b/views/layouts/post_page.handlebars
@@ -10,7 +10,9 @@
     {{/if}} 
     <h3> Title: {{post.title}} </h3>
     <h3> Author: {{post.author_id}} </h3>
+    <h3> Rating : {{post.rating}} </h3>
     <h4> Beverage: {{post.beverage_id}}  </h4>
+   
     <img src="/public/images/{{post.photo_path}}" alt="Beverage Photo"/> 
     <p> {{post.content}} </p>
     
