--- a/views/layouts/post_page.handlebars
+++ b/views/layouts/post_page.handlebars
@@ -26,7 +26,7 @@
     </div>
 
     <div class="commentArea">
-        <ul>
+        <ul class = "comments_unordered_list">
             {{#each comments}}
                 <li id="comments">
 			{{this.user_id}}: {{this.content}}
