--- a/views/layouts/search.handlebars
+++ b/views/layouts/search.handlebars
@@ -1,6 +1,6 @@
 <h1 class="title">{{heading}}</h1>
 <main class = "search">
-<form id = "search" action = '/home' method = 'post'>
+{{!-- <form id = "search" action = '/home' method = 'post'>
 	<label for="beverage_name" > Beverage Name: </label>
     <input type="text" id="beverage_name" name="beverage_name" required><br>
     <label for="rating"> Rating:</label>
@@ -13,6 +13,21 @@
     <input type="text" id="subtype" name="subtype" required><br>
     <label for="company" > Company Name: </label>
     <input type="text" id="company" name="company" required><br>
+    <input type="submit" value="Search" id = "submit" ><br>
+</form> --}}
+<form id = "search" action = '/home' method = 'post'>
+	<label for="beverage_name" > Beverage Name: </label>
+    <input type="text" id="beverage_name" name="beverage_name"><br>
+    <label for="rating"> Rating:</label>
+    <input type="number" min="0" max="5" id = "rating" name="rating"><br>
+    <label style = "vertical-align: top" for= "tastes">Tastes:</label>
+    <textarea name="tastes"  id = "tastes"></textarea><br>
+    <label for="type" > Type: </label>
+    <input type="text" id="type" name="type"><br>
+    <label for="subtype" > Subtype </label>
+    <input type="text" id="subtype" name="subtype"><br>
+    <label for="company" > Company Name: </label>
+    <input type="text" id="company" name="company"><br>
     <input type="submit" value="Search" id = "submit" ><br>
 </form>
 
