fixed add beverage form

--- a/views/layouts/post_beverage.handlebars
+++ b/views/layouts/post_beverage.handlebars
@@ -1,6 +1,6 @@
 <main>
     <a href = "/home" > Home </a>
-    <form class="form" enctype="multipart/form-data" action="/beverage_status" method="POST">
+    <form class="form" action="/beverage_status" method="POST">
         <label for="name" > Name:
             <input type="text" id="name" name="name" required><br>
         </label>
@@ -14,7 +14,7 @@
             <input type="text" id="tastes" name="tastes" required>
         </label>
         <label for="company"> Company:
-            <input type="text" id="comapny" name="company" required>
+            <input type="text" id="company" name="company" required>
         </label>
         <button class="button" type="submit"> Submit </button>
     </form>
