fixed tastes. create beverage done

--- a/views/layouts/post_beverage.handlebars
+++ b/views/layouts/post_beverage.handlebars
@@ -11,7 +11,8 @@
             <input type="text" id="subtype" name="subtype" required>
         </label>
         <label for="tastes"> Tastes:
-            <input type="text" id="tastes" name="tastes" required>
+            <!--<input type="text" id="tastes" name="tastes" required>-->
+	    <textarea name="tastes" required></textarea>
         </label>
         <label for="company"> Company:
             <input type="text" id="company" name="company" required>
