clean up html for writing comments

--- a/views/layouts/post_page.handlebars
+++ b/views/layouts/post_page.handlebars
@@ -19,9 +19,9 @@
     <div class="formArea">
         <form id="comment_form">
             <label for="content"></label>
-            <input type="text" name="content" id="content"/>
+            <textarea name="content" id="content"></textarea> <br>
             <input type= "hidden" id = "post_id" name = 'post_id' value = "{{post._id}}"/>
-            <input type="submit" value="Submit comment!"/>
+            <button class="button" type="submit">Submit</button>
         </form>
     </div>
 
