--- a/views/layouts/beverage.handlebars
+++ b/views/layouts/beverage.handlebars
@@ -1,7 +1,19 @@
 <body>
+    <nav class="navBar">
+		<table>
+			<tr>
+            <td><a class="navLink" href="/home">Home</a></td>
+            <td><a class="navLink" href="/post_beverage">Create a beverage</a></td>
+            <td><a class="navLink" href="/post_review">Write a review</a></td>
+			</tr>
+		</table>
+		</nav>
     <div>
-    <h1>Beverage's Name: {{Beverage.name}}</h1> 
-    <h1>Beverage's Rating: {{Beverage.rating}}</h1>
+    <br>
+    <br>
+    <hr>
+    <h2>Beverage's Name: {{Beverage.name}}</h1> 
+    <h2>Beverage's Rating: {{Beverage.rating}}</h1>
     {{!-- <p>{{Beverage.ratingCount}}</p> --}}
     </div>
     
