--- a/views/layouts/login_signup.handlebars
+++ b/views/layouts/login_signup.handlebars
@@ -14,6 +14,17 @@
 
 <body>
     <h1>RateMyDrinks</h1>
+        <nav class="navBar">
+		<table>
+			<tr>
+            <td><a class="navLink" href="/home">Home</a></td>
+			</tr>
+		</table>
+		</nav>
+    <div>
+    <br>
+    <br>
+    <hr>
     <main>
        
         <form id = "login-form" action = "/login" method = "post">
