--- a/views/layouts/beverage_status.handlebars
+++ b/views/layouts/beverage_status.handlebars
@@ -1,4 +1,17 @@
 <main>
+    <nav class="navBar">
+    <table>
+        <tr>
+		<td><a class="navLink" href="/home">Home</a></td>
+        <td><a class="navLink" href="/post_beverage">Create a beverage</a></td>
+        <td><a class="navLink" href="/post_review">Write a review</a></td>
+        </tr>
+    </table>
+    </nav>
+    <div>
+    <br>
+    <br>
+    <hr>
     {{#if error}}
     <p>Error: Beverage Not Created</p>
     {{else}}
