added detailed error for create beverage

--- a/views/layouts/beverage_status.handlebars
+++ b/views/layouts/beverage_status.handlebars
@@ -13,7 +13,7 @@
     <br>
     <hr>
     {{#if error}}
-    <p>Error: Beverage Not Created</p>
+    <p>Error: Beverage {{name}} already exists. </p>
     {{else}}
     <h2> Success: Beverage Created! </h2>
     <h3> Name: {{name}} </h2>
