small html change

--- a/views/layouts/beverage.handlebars
+++ b/views/layouts/beverage.handlebars
@@ -12,7 +12,7 @@
     <br>
     <br>
     <hr>
-    <h2>Beverage {{Beverage.name}}</h2> 
+    <h2>{{Beverage.name}}</h2> 
     <dl>
         <dt class="bevLabel">Type</dt>
         <dd class="bevDesc">{{Beverage.type}}</dd>
