--- a/views/layouts/post_beverage.handlebars
+++ b/views/layouts/post_beverage.handlebars
@@ -1,14 +1,4 @@
 <main>
-    <nav class="navBar">
-		<table>
-			<tr>
-            <td><a class="navLink" href="/home">Home</a></td>
-            <td><a class="navLink" href="/post_beverage">Create a beverage</a></td>
-            <td><a class="navLink" href="/post_review">Write a review</a></td>
-			</tr>
-		</table>
-		</nav>
-    <div>
     <br>
     <br>
     <hr>
@@ -24,7 +14,7 @@
         </label>
         <label for="tastes"> Tastes:
             <!--<input type="text" id="tastes" name="tastes" required>-->
-	    <textarea name="tastes" required></textarea>
+	    <textarea name="tastes" id="tastes" required></textarea>
         </label>
         <label for="company"> Company:
             <input type="text" id="company" name="company" required>
