patched the pages :)

--- a/views/layouts/error.handlebars
+++ b/views/layouts/error.handlebars
@@ -1,15 +1,7 @@
-<nav class="navBar">
-		<table>
-			<tr>
-            <td><a class="navLink" href="/home">Home</a></td>
-            <td><a class="navLink" href="/post_beverage">Create a beverage</a></td>
-            <td><a class="navLink" href="/post_review">Write a review</a></td>
-			</tr>
-		</table>
-		</nav>
-<div>
+<main>
 <br>
 <br>
 <hr>
 <h1 class="title">400 Error</h1>
 <p>:(</p>
+</main>
