--- a/views/layouts/post_status.handlebars
+++ b/views/layouts/post_status.handlebars
@@ -1,26 +1,17 @@
 <main>
-    <nav class="navBar">
-		<table>
-			<tr>
-            <td><a class="navLink" href="/home">Home</a></td>
-            <td><a class="navLink" href="/post_beverage">Create a beverage</a></td>
-            <td><a class="navLink" href="/post_review">Write a review</a></td>
-			</tr>
-		</table>
-		</nav>
     <div>
-    <br>
-    <br>
     <hr>
     {{#if error}}
     <p>Error: Beverage Not Found</p>
     {{else}}
     <a href = "/post_review" > Make Another Review</a>
     <h2> Success </h2>
-    <h3> Title: {{title}} </h2>
+    <h3> Title: {{title}} </h3>
     <h3> Author: {{author}} </h3>
     <h4> Beverage: {{beverage}}  </h4>
     <img src="/public/images/{{path}}" alt="Beverage Photo"/> 
     <p> {{content}} </p>
     {{/if}}
+    </div>
+    
 </main>
