--- a/views/layouts/search.handlebars
+++ b/views/layouts/search.handlebars
@@ -34,7 +34,7 @@
 <ul>
 	{{#each drinks}}
 	<li>
-	<a href="/beverage/{{this._id}}">{{this.name}}</a></br>
+	<a href="/beverage/{{this._id}}">{{this.name}}</a><br>
 	
 	</li>
 	{{/each}}
