--- a/views/layouts/post_beverage.handlebars
+++ b/views/layouts/post_beverage.handlebars
@@ -14,7 +14,7 @@
         </label>
         <label for="tastes"> Tastes:
             <!--<input type="text" id="tastes" name="tastes" required>-->
-	    <textarea name="tastes" required></textarea>
+	    <textarea name="tastes" id="tastes" required></textarea>
         </label>
         <label for="company"> Company:
             <input type="text" id="company" name="company" required>
