--- a/views/layouts/login_signup.handlebars
+++ b/views/layouts/login_signup.handlebars
@@ -21,7 +21,7 @@
 			</tr>
 		</table>
 		</nav>
-    <div>
+    
     <br>
     <br>
     <hr>
@@ -52,8 +52,9 @@
                     <td>
                         <input type="submit" value="Login" id = "submit" ><br>
                     </td>
-                    
+                        {{#if login_error}}
                         <td>{{login_error}}</td>
+                        {{/if}}
                     
                 </tr>
              </table>
@@ -65,7 +66,7 @@
             <table>
                 <tr>
                 <td>
-                    <label for= "screenName">Username:</label> 
+                    <label for= "username">Username:</label> 
                     <input type="text" name="username"  id = "username" required>
                 </td>
                 <td>
@@ -79,7 +80,7 @@
             <textarea name="bio"  id = "bio" required>{{bio}}</textarea><br>
             <label for = 'password' >Password:</label>
             <input type="password" name="password"  id = "password" required ><br>
-            <input type="submit" value="Login" id = "submit"><br>
+            <input type="submit" value="Login" id = "submit2"><br>
 
         </form>
 
